--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>lembo</title>
   
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" type="lembo-icon" href="./download (1).jpg">
+    <link rel="shortcut icon" type="lembo-icon" href="./img/download (1).jpg">
 <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
@@ -99,7 +99,7 @@ style="background-image: url(https://img.daisyui.com/images/stock/photo-15073585
           <div class="card card-compact bg-base-100 w-96 shadow-xl">
               <figure>
                 <img
-                  src="./photo-1559703248-dcaaec9fab78.webp"
+                  src="./img/photo-1559703248-dcaaec9fab78.webp"
                   alt="Shoes" />
               </figure>
               <div class="card-body">
@@ -113,7 +113,7 @@ style="background-image: url(https://img.daisyui.com/images/stock/photo-15073585
             <div class="card card-compact bg-base-100 w-96 shadow-xl">
               <figure>
                 <img
-                  src="./photo-1565098772267-60af42b81ef2.webp"
+                  src="./img/photo-1565098772267-60af42b81ef2.webp"
                   alt="Shoes" />
               </figure>
               <div class="card-body">
@@ -127,7 +127,7 @@ style="background-image: url(https://img.daisyui.com/images/stock/photo-15073585
             <div class="card card-compact bg-base-100 w-96 shadow-xl">
               <figure>
                 <img
-                  src="./photo-1572635148818-ef6fd45eb394.webp"
+                  src="./img/photo-1572635148818-ef6fd45eb394.webp"
                   alt="Shoes" />
               </figure>
               <div class="card-body">
@@ -146,7 +146,7 @@ style="background-image: url(https://img.daisyui.com/images/stock/photo-15073585
           <div class="card card-compact bg-base-100 w-96 shadow-xl">
               <figure>
                 <img
-                  src="./OIP.jpg"
+                  src="./img/OIP.jpg"
                   alt="car" />
               </figure>
               <div class="card-body">
@@ -160,7 +160,7 @@ style="background-image: url(https://img.daisyui.com/images/stock/photo-15073585
             <div class="card card-compact bg-base-100 w-96 shadow-xl">
               <figure>
                 <img  
-                  src="./OIP (1).jpg"
+                  src="./img/OIP (1).jpg"
                   alt="car" />
               </figure>
               <div class="card-body">
@@ -174,7 +174,7 @@ style="background-image: url(https://img.daisyui.com/images/stock/photo-15073585
             <div class="card card-compact bg-base-100 w-96 shadow-xl"> 
               <figure>
                 <img
-                  src="./download.jpg"
+                  src="./img/download.jpg"
                   alt="car" />
               </figure>
               <div class="card-body">
